kubernetes/spring-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-app
  labels:
    app: spring-app
spec:
  containers:
    - name: spring-pod-container
      image: deiandrei/devops-fur-techniker:0.0.1
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          memory: "200Mi"
