kubernetes/spring-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-nodeport
spec:
  type: NodePort
  selector:
    app: spring-app
  ports:
    - name: http
      protocol: TCP
      targetPort: spring-app-port
      nodePort: 30091
      port: 1234
